# test_robot

./: .gitignore  README.md  analysis.py  pyproject.toml  record.stats
notebooks/: act_training_intro.ipynb  new.ipynb  repair_dataset.ipynb  test.ipynb
src/test_robot/: __init__.py  config.py  eval_policy.py  record_dataset.py  reset_gracefully.py  start_teleop.py
src/test_robot/patches/: video_encoding.py
