[project]
name = "test-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Neumann", email = "felix.maximilian.neumann@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "lerobot[feetech]>=0.4.0",
    "matplotlib>=3.10.7",
    "wandb>=0.21.4",
]

[project.scripts]
test-robot = "test_robot:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
