[project]
name = "test-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Felix Neumann", email = "felix.maximilian.neumann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "gym-hil>=0.1.13",
    "huggingface-hub>=0.35.3",
    "jupyter>=1.1.1",
    "lerobot[async,feetech,smolvla,pi] @ git+https://github.com/huggingface/lerobot.git",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0.88",
    "py-spy>=0.4.1",
    "python-dotenv>=1.2.1",
    "wandb>=0.21.4",
    # Override torch to use CUDA 12.8 for RTX 5090 support
    "torch>=2.7.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[project.scripts]
test-robot = "test_robot:main"
tele = "test_robot.start_teleop:main"
record = "test_robot.record_dataset:main"
reset = "test_robot.reset_gracefully:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
